Desenvolvimento da insercao na executionLog e tratamento de erros
